fix misaligned bmc-btn

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -306,6 +306,7 @@ body {
 
 .bmc-btn-container .bmc-btn {
   margin-right: 1rem;
+  text-align: left;
 }
 
 .bmc-btn-container .bmc-btn {
